--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -63,8 +63,12 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
+    {% if user.bio%}
     <p>{{ user.bio }}</p>
+    {% endif %}
+    {% if user.location %}
     <p class="user-location"><span class="fa fa-map-marker"></span>{{ user.location}}</p>
+    {% endif %}
   </div>
 
   {% block user_details %}
