--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -34,7 +34,12 @@
           </li>
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>TBD</h4>
+            <h4>
+              <a href="/users/{{user.id}}/liked">
+                {{ g.user.likes|length }}
+              </a>
+
+            </h4>
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
@@ -63,11 +68,13 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    {% if user.bio%}
+    {% if user.bio %}
     <p>{{ user.bio }}</p>
     {% endif %}
     {% if user.location %}
-    <p class="user-location"><span class="fa fa-map-marker"></span>{{ user.location}}</p>
+    <p class="user-location"><span class="fa fa-map-marker"></span>
+      {{ user.location }}
+    </p>
     {% endif %}
   </div>
 
