--- a/templates/users/liked.html
+++ b/templates/users/liked.html
@@ -1,5 +1,8 @@
 {% extends 'users/detail.html' %}
 {% block user_details %}
+<script src='/static/likes.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <div class="col-sm-6">
     <ul class="list-group" id="messages">
 
@@ -18,15 +21,15 @@
             <p>{{ message.text }}</p>
           </div>
           {% if g.user.id != message.user_id %}
-          <form method="POST" action="/messages/{{ message.id }}/like" class="messages-like">
-            <button class="
+          
+            <button data-id="{{message.id}}" class="
               btn
               btn-sm
-              btn-primary"
+              btn-primary like-button"
             >
               <i class="fa fa-thumbs-up"></i>
             </button>
-          </form>
+          
           {% endif %}
         </li>
 
@@ -35,3 +38,5 @@
     </ul>
   </div>
 {% endblock %}
+
+<!-- method="POST" action="/messages/{{ message.id }}/like" -->
