--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -18,15 +18,15 @@
             <p>{{ message.text }}</p>
           </div>
           {% if g.user.id != message.user_id %}
-          <form method="POST" action="/messages/{{ message.id }}/like" class="messages-like">
-            <button class="
-              btn
-              btn-sm
+          <div class="messages-like">
+            <button data-id="{{message.id}}" class="
+              btn like-button
+              btn-sm 
               {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
             >
-              <i class="fa fa-thumbs-up"></i>
+              <i class="fa fa-thumbs-up"></i> 
             </button>
-          </form>
+          </div>
           {% endif %}
         </li>
 
