--- a/templates/base.html
+++ b/templates/base.html
@@ -61,5 +61,8 @@
   {% endblock %}
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src='/static/likes.js'></script>
 </body>
 </html>
